<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="@dimen/common_margin_50"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/area_tv"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/area"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/confirm_tv"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/confirm"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/dead_tv"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/dead"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/cure_tv"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/cure"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        android:gravity="center"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text=""
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:gravity="center"
        />
</LinearLayout>