<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.areas.AreasFragment">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_margin_50">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/area"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/confirm"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dead"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cure"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:gravity="center"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text=""
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:gravity="center"
            />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recycler_area"
        android:layout_marginTop="@dimen/common_margin_50"
        />
</FrameLayout>