<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.brins.ncov_2019.ui.statistics.StatisticsViewModel" />
    </data>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.rurmor.RumorDBFragment">

        <com.scwang.smartrefresh.layout.SmartRefreshLayout
            android:id="@+id/smart_refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.core.widget.NestedScrollView
                android:id="@+id/custom_drag_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <include
                        layout="@layout/fragment_statistics"
                        bind:confirmedData="@{viewModel.mConfirmed}"
                        bind:curedData="@{viewModel.mCured}"
                        bind:deadData="@{viewModel.mDead}"
                        bind:suspectedData="@{viewModel.mSuspected}" />

                    <TextView
                        android:id="@+id/date_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:textColor="@color/gery"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/national_container_cl"
                        bind:textDate="@{viewModel.metaNationalData.modifyTime}" />

                    <TextView
                        android:id="@+id/source_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:text="来源：各地区卫健委"
                        android:textColor="@color/gery"
                        android:textSize="12sp"
                        app:layout_constraintBaseline_toBaselineOf="@id/date_tv"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <View
                        android:id="@+id/divider_1"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/common_margin_5"
                        android:background="@color/white1_80"
                        app:layout_constraintTop_toBottomOf="@id/source_tv" />

                    <View
                        android:id="@+id/title_tag_1"
                        android:layout_width="@dimen/common_margin_5"
                        android:layout_height="@dimen/common_margin_10"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:background="@android:color/holo_red_dark"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/divider_1" />

                    <TextView
                        android:id="@+id/map_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/common_margin_10"
                        android:text="@string/map"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@id/title_tag_1"
                        app:layout_constraintStart_toEndOf="@id/title_tag_1"
                        app:layout_constraintTop_toTopOf="@id/title_tag_1" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:scaleType="centerCrop"
                        android:background="@null"
                        android:id="@+id/national_iv"
                        app:layout_constraintTop_toBottomOf="@id/map_title"
                        bind:imageUrl="@{viewModel.metaNationalData.nationalImgUrl}" />

                    <View
                        android:id="@+id/title_tag_0"
                        android:layout_width="@dimen/common_margin_5"
                        android:layout_height="@dimen/common_margin_10"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:background="@android:color/holo_red_dark"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/national_iv" />

                    <TextView
                        android:id="@+id/consultation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/common_margin_10"
                        android:text="@string/conssultation"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@id/title_tag_0"
                        app:layout_constraintStart_toEndOf="@id/title_tag_0"
                        app:layout_constraintTop_toTopOf="@id/title_tag_0" />

                    <LinearLayout
                        android:id="@+id/consultation_container_ll"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/title_tag_0"
                        android:layout_marginTop="15dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_weight="1"
                            android:id="@+id/outpatient_container_cl0"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/common_margin_80">

                            <ImageView
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                android:src="@drawable/ic_outpatient"
                                android:layout_width="55dp"
                                android:layout_height="55dp"
                                android:id="@+id/ic_1"
                                />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/men_zhen"
                                android:textSize="12sp"
                                android:layout_marginTop="@dimen/common_margin_5"
                                app:layout_constraintTop_toBottomOf="@id/ic_1"
                                app:layout_constraintStart_toStartOf="@id/ic_1"
                                app:layout_constraintEnd_toEndOf="@id/ic_1"
                                />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_weight="1"
                            android:id="@+id/outpatient_container_cl1"
                            android:layout_width="0dp"
                            android:orientation="vertical"
                            android:layout_height="@dimen/common_margin_80">

                            <ImageView
                                android:id="@+id/ic_2"
                                android:src="@drawable/ic_search"
                                android:layout_width="55dp"
                                android:layout_height="55dp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/search"
                                android:textSize="12sp"
                                app:layout_constraintTop_toBottomOf="@id/ic_2"
                                android:layout_marginTop="5dp"
                                app:layout_constraintStart_toStartOf="@id/ic_2"
                                app:layout_constraintEnd_toEndOf="@id/ic_2"
                                />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_weight="1"
                            android:id="@+id/outpatient_container_cl2"
                            android:layout_width="0dp"
                            android:orientation="vertical"
                            android:layout_height="@dimen/common_margin_80">

                            <ImageView
                                android:id="@+id/ic_3"
                                android:src="@drawable/ic_diagnosis"
                                android:layout_width="55dp"
                                android:layout_height="55dp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/online"
                                android:textSize="12sp"
                                app:layout_constraintTop_toBottomOf="@id/ic_3"
                                android:layout_marginTop="5dp"
                                app:layout_constraintStart_toStartOf="@id/ic_3"
                                app:layout_constraintEnd_toEndOf="@id/ic_3"
                                />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </LinearLayout>
                    <View
                        android:id="@+id/title_tag_2"
                        android:layout_width="@dimen/common_margin_5"
                        android:layout_height="@dimen/common_margin_10"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:background="@android:color/holo_red_dark"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/consultation_container_ll" />

                    <TextView
                        android:id="@+id/trend_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/common_margin_10"
                        android:text="@string/trend"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@id/title_tag_2"
                        app:layout_constraintStart_toEndOf="@id/title_tag_2"
                        app:layout_constraintTop_toTopOf="@id/title_tag_2" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:id="@+id/trend_iv"
                        android:background="@null"
                        android:scaleType="centerCrop"
                        app:layout_constraintTop_toBottomOf="@id/trend_title"
                        bind:imageUrl="@{viewModel.metaNationalData.dailyTrend[0]}" />

                    <View
                        android:id="@+id/title_tag_3"
                        android:layout_width="@dimen/common_margin_5"
                        android:layout_height="@dimen/common_margin_10"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:background="@android:color/holo_red_dark"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/trend_iv" />

                    <TextView
                        android:id="@+id/trend_title1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/common_margin_10"
                        android:text="@string/trend"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@id/title_tag_3"
                        app:layout_constraintStart_toEndOf="@id/title_tag_3"
                        app:layout_constraintTop_toTopOf="@id/title_tag_3" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:id="@+id/trend_iv1"
                        android:background="@null"
                        android:scaleType="centerCrop"
                        app:layout_constraintTop_toBottomOf="@id/trend_title1"
                        bind:imageUrl="@{viewModel.metaNationalData.dailyTrend[1]}" />

                    <View
                        android:id="@+id/title_tag_4"
                        android:layout_width="@dimen/common_margin_5"
                        android:layout_height="@dimen/common_margin_10"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:background="@android:color/holo_red_dark"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/trend_iv1" />

                    <TextView
                        android:id="@+id/rumors_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/common_margin_10"
                        android:text="@string/rumors"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@id/title_tag_4"
                        app:layout_constraintStart_toEndOf="@id/title_tag_4"
                        app:layout_constraintTop_toTopOf="@id/title_tag_4" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:id="@+id/rumors_recycler"
                        android:background="@null"
                        app:layout_constraintTop_toBottomOf="@id/rumors_title"
                         />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.core.widget.NestedScrollView>
        </com.scwang.smartrefresh.layout.SmartRefreshLayout>
    </FrameLayout>
</layout>